--- a/src/js/core/directives/rating/template.html
+++ b/src/js/core/directives/rating/template.html
@@ -1,5 +1,5 @@
 <ul class="rating">
 	<li ng-repeat="star in stars" ng-class="star" ng-click="toggle($index)">
-		\u2605
+		 <span class="glyphicon glyphicon-star"></span>
 	</li>
 </ul>
